# TailscaleHound

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt  schema.json
ExampleData/: tailscalehound_hybrid_paths_demo.json  tailscalehound_local_opengraph_demo.json  tailscalehound_remote_opengraph_demo.json
SavedQueries/: Tailscale ACL - CIDRs.json  Tailscale ACL - Node Attributes.json  Tailscale ACL - Port Specs.json  Tailscale ACL - Raw Targets.json  Tailscale ACL - Rules.json  Tailscale ACL - Tests.json  Tailscale ACL Tests - Denies.json  Tailscale ACL Tests - Source Paths [Direct Source].json  Tailscale ACL Tests - Source Paths [Group Membership].json  Tailscale ACL Tests - Source To Denied Ports [Direct Source].json  Tailscale ACL Tests - Source To Denied Ports [Group Membership].json  Tailscale ACL Tests - Source To Denies [Direct Source].json  Tailscale ACL Tests - Source To Denies [Group Membership].json  Tailscale ACLs - Group Or Autogroup To Device.json  Tailscale ACLs - Sources.json  Tailscale ACLs - Targets App Connectors.json  Tailscale ACLs - Targets Devices.json  Tailscale ACLs - Targets Exit Nodes.json  Tailscale ACLs - Targets Routes.json  Tailscale API Keys - List.json  Tailscale Access - Device Access Paths [Direct Source].json  Tailscale Access - Device Access Paths [Group Membership].json  Tailscale Access - Device Port Access [Direct Source].json  Tailscale Access - Device Port Access [Group Membership].json  Tailscale Access - Group Port Access.json  Tailscale App Connector - Runs On Devices.json  Tailscale Auth Keys - List.json  (+82 more)
(+15 files in other folders)
